# RpiSound

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  architecture.puml
cmake/: clang-format.cmake  cppcheck.cmake  toolchain-aarch64.cmake
examples/: CMakeLists.txt  play_wav.cpp
include/rpi_sound/: alsa_audio_device.hpp  alsa_driver.hpp  audio_device.hpp  audio_device_manager.hpp  audio_utils.hpp  iaudio_device.hpp  iaudio_device_manager.hpp  iaudio_driver.hpp  iaudio_parser.hpp  ieffect.hpp  ipcm_player.cpp  isound_loader.hpp  isound_manager.hpp  pcm_converter.hpp  pcm_loader.hpp  player.hpp  sound_manager.hpp  tiny_alsa_wrapper.hpp  wav_parser.hpp
include/rpi_sound/types/: audio_device.hpp  audio_device_info.hpp  sound_metadata.hpp  sound_sample.hpp
include/utilities/: logger.hpp
scripts/: create_sound_db.py  sync-built-files.sh  sync-sysroot.sh  wav_generator.py
sound/demo/crash/: crash_0.pcm  crash_1.pcm  crash_2.pcm  crash_3.pcm  crash_4.pcm  crash_5.pcm
sound/demo/hi_hat_closed/: hi_hat_closed_0.pcm  hi_hat_closed_1.pcm  hi_hat_closed_10.pcm  hi_hat_closed_11.pcm  hi_hat_closed_12.pcm  hi_hat_closed_13.pcm  hi_hat_closed_14.pcm  hi_hat_closed_15.pcm  hi_hat_closed_2.pcm  hi_hat_closed_3.pcm  hi_hat_closed_4.pcm  hi_hat_closed_5.pcm  hi_hat_closed_6.pcm  hi_hat_closed_7.pcm  hi_hat_closed_8.pcm  hi_hat_closed_9.pcm
sound/demo/hi_hat_open/: hi_hat_open_0.pcm  hi_hat_open_1.pcm  hi_hat_open_2.pcm  hi_hat_open_3.pcm  hi_hat_open_4.pcm  hi_hat_open_5.pcm  hi_hat_open_6.pcm  hi_hat_open_7.pcm  hi_hat_open_8.pcm
sound/demo/kick/: kick_0.pcm  kick_1.pcm  kick_2.pcm  kick_3.pcm  kick_4.pcm  kick_5.pcm  kick_6.pcm  kick_7.pcm
sound/demo/ride/: ride_0.pcm  ride_1.pcm  ride_2.pcm  ride_3.pcm  ride_4.pcm
sound/demo/rim/: rim_0.pcm
sound/demo/snare/: snare_0.pcm  snare_1.pcm  snare_2.pcm  snare_3.pcm  snare_4.pcm  snare_5.pcm
sound/demo/tom_high/: tom_high_0.pcm  tom_high_1.pcm  tom_high_2.pcm  tom_high_3.pcm  tom_high_4.pcm
sound/demo/tom_low/: tom_low_0.pcm  tom_low_1.pcm  tom_low_2.pcm  tom_low_3.pcm  tom_low_4.pcm  tom_low_5.pcm  tom_low_6.pcm  tom_low_7.pcm
sound/demo/tom_mid/: tom_mid_0.pcm  tom_mid_1.pcm  tom_mid_2.pcm  tom_mid_3.pcm
src/: alsa_driver.cpp  audio_device.cpp  audio_device_manager.cpp  pcm_converter.cpp  pcm_loader.cpp  player.cpp  rpi_sound.cpp  tiny_alsa_wrapper.cpp  wav_parser.cpp
src/rpi_sound/: alsa_driver.cpp  audio_device.cpp  audio_device_manager.cpp  pcm_loader.cpp  sound_manager.cpp
tests/: CMakeLists.txt  unittest_alsa_driver.cpp  unittest_player.cpp  unittest_wav_parse.cpp
tests/mocks/: mockAlsaDriver.hpp  mockAudioDevice.h  mockAudioDevice.hpp
